Fix background color navbar on smaller screens

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -51,6 +51,12 @@ body {
     font-weight: 700;
 }
 
+@media (max-width: 991px) {
+    .navbar {
+        background-color: #fff;
+    }
+}
+
 /*
 	Home
 */
